# SOFTX_2020_135

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  shem_ad.f90  shem_dd.f90  shem_fl.f90  shem_fw.f90  shem_parameter.f90  shem_sm.f90  version.inc.in
.gitlab/issue_templates/: Error.md
ad_tap/head/: calc_conc_ad.f90  calc_head_ad.f90  check_change_ad.f90  dxypz_ad.f90  dxyz_ad.f90  head2pres_ad.f90  li_ad.f90  lin_interpol_ad.f90  lk_ad.f90  nl_relax_ad.f90  old_restore_ad.f90  omp_head2pres_ad.f90  omp_mvp_ad.f90  omp_old_restore_ad.f90  omp_old_save_ad.f90  set_cbc_ad.f90  set_ccoef_ad.f90  set_ccoefrs_ad.f90  set_cq_ad.f90  set_dhbc_ad.f90  set_hbc_ad.f90  set_hq_ad.f90  set_optip_ad.f90  set_tbc_ad.f90  set_tcoefrs_ad.f90  stab_param_ad.f90  tool.ver  vx_ad.f90  vy_ad.f90  vz_ad.f90
ad_tap/pres/: alfa_ad.f90  calc_conc_ad.f90  di_ad.f90  dj_ad.f90  dk_ad.f90  get_tpbcalbe_ad.f90  interpolatelin_ad.f90  lj_ad.f90  old_save_ad.f90  omp_pres2head_ad.f90  omp_set_dval_ad.f90  pres2head_ad.f90  set_cbc_ad.f90  set_ccoef_ad.f90  set_ccoefrs_ad.f90  set_dpbc_ad.f90  set_dtbc_ad.f90  set_pbc_ad.f90  set_pq_ad.f90  set_tbc_ad.f90  set_tcoefrs_ad.f90  vx_ad.f90  vy_ad.f90
blas/ad_tap/: daxpy_ad.f  dcopy_ad.f  dscal_ad.f
blas/g_tap/: g_daxpy.f90  g_dcopy.f90  g_dscal.f90
blas/g_xxx/: g_daxpy.f90  g_dcopy.f90  g_ddot.f90  g_dgemv.f90  g_dscal.f90
cmake/: AD.cmake  Dependencies.cmake  Flags.cmake  Options.cmake  Packages.cmake  Sources.cmake
doc/: Doxyfile
forward/: alloc_arrays.f90  alloc_data.f90  arrays.f90  bhpr.f90  check_change.f90  check_props.f90  check_units.f90  compare_run.f90  converged.f90  courant.f90  dealloc_arrays.f90  deltat.f90  forward_compute.f90  forward_init.f90  forward_iter.f90  forward_picard.f90  forward_preparation.f90  forward_wrapper.f90  forward_write.f90  get_optip.f90  get_tpbcalbe.f90  mod_conc.f90  mod_data.f90  mod_flow.f90  mod_genrl.f90  mod_genrlc.f90  mod_linfos.f90  mod_temp.f90  mod_time.f90  model_init.f90  nlrelaxad.f90  no_ext_link.f90  old_restore.f90  old_save.f90  omp_bindtools.f90  omp_bugfix.f90  omp_file_handler.f90  omp_libnuma.c  omp_summe.f90  param_enabled.f90  (+10 more)
forward/conc/: calc_conc.f90  cfluxes.f90  neumann_conc.f90  peclet_conc.f90  set_cbc.f90  set_ccoef.f90  set_cq.f90
forward/ctrlut/: decntrl3.f90  (+5 more)
hdf5/: add_cube.f90  add_line.f90  add_plane.f90  close_hdf5.f90  closeopen_hdf5.f90  create_hdf5.f90  mod_hdf5_vars.f90  mod_input_file_parser_hdf5.f90  open_hdf5.f90  read_hdf5.f90  read_hdf5_int.f90  read_joutt_hdf5.f90  read_outt_hdf5.f90  test_hdf5.f90  write_all_hdf5.f90  write_hdf5.f90  write_hdf5_int.f90  write_inv_hdf5.f90  write_joutt_hdf5.f90  write_parameter2_hdf5.f90  write_parameter_hdf5.f90
inverse/: alloc_inverse.f90  calc_covares.f90  dd_iter.f90  dd_jacobian.f90  dd_seeding.f90  dealloc_inverse.f90  g_initzero.f90  g_old_restore.f90  gp_old_save.f90  head_tecpl.f90  inv_step.f90  inverse_wrapper.f90  jac_mv.f90  jacobi_compute.f90  jact_mv.f90  mod_inverse.f90  prepare_jacobian.f90  qfunc.f90  read_inverse.f90  read_restartINV.f90  read_split_inv.f90  reg_func.f90  restore_jacobian.f90  seeding.f90  step_bayes.f90  step_bayes_mf.f90  step_d_space.f90  step_p_space.f90  update_model.f90  update_param.f90  weights_d_space.f90  weights_p_space.f90  write_covariances.f90  write_gtecplot.f90  write_jacw.f90  write_joutt.f90  write_parameter.f90  write_resolution.f90
lapack/: dbdsqr.f  dgbsv.f  dgbtf2.f  dgbtrf.f  dgbtrs.f  dgebd2.f  dgebrd.f  dgelq2.f  dgelqf.f  dgeqr2.f  dgeqrf.f  dgesv.f  dgesvd.f  dgetf2.f  dgetrf.f  dgetrf2.f  dgetri.f  dgetrs.f  disnan.f  dlabrd.f  dlacpy.f  dlae2.f  dlaebz.f  dlaev2.f  dlagtf.f  dlagts.f  dlaic1.f  dlaisnan.f  dlamch.f  dlange.f  dlanst.f  dlansy.f  dlapy2.f  dlarf.f  dlarfb.f  dlarfg.f  dlarft.f  dlarnv.f  dlartg.f  dlaruv.f  (+51 more)
mkAD/: Makefile  Makefile.sub  README.txt  adjust_function_type.py  calc_user_ad.f90  check_ad_rm.py  check_g_externals.py  check_subroutine_adrm.py  check_temp.py  f90split.f90  fsplit.c  modify_init.py  mv_tap_adm  mv_tap_tlm  parser.py  preparefiles.csh  remove_OMP.py  remove_dummy.py  remove_nonAD.py  remove_preproc.py  solve_dummy.f90  tree.csh  use_include_g.py
simul/: CMakeLists.txt  alloc_sgsim.f90  alloc_simul.f90  alloc_visim.f90  enkf_add_system_noise.f90  enkf_alloc_obs.f90  enkf_alloc_resid.f90  enkf_alloc_state_vector.f90  enkf_alloc_stddev.f90  enkf_alloc_true.f90  enkf_assim_comb.f90  enkf_assim_sequ.f90  enkf_assim_single.f90  enkf_calc_statistics.f90  enkf_compute_covs.f90  enkf_compute_mean.f90  enkf_correlation_fcn.f90  enkf_cov_pp.f90  enkf_dealloc.f90  enkf_dealloc_state_vector.f90  enkf_dual_enkf.f90  enkf_euclidean_dist.f90  enkf_generate_gaussians.f90  enkf_hybrid_cov.f90  enkf_hybrid_subcovs.f90  enkf_hybrid_subcovs_dealloc.f90  enkf_hybrid_var_covs.f90  enkf_index_loc_to_mem.f90  enkf_index_mem_to_loc.f90  enkf_index_obs_to_mem.f90  enkf_input.f90  enkf_input_check.f90  enkf_iter.f90  enkf_iterative_enkf.f90  enkf_log.f90  enkf_make_cov_loc.f90  enkf_make_output_dirs.f90  enkf_make_state_vector.f90  enkf_normal_score.f90  enkf_normal_score_back.f90  (+61 more)
solve/: CMakeLists.txt  OMP_TOOLS.f90  OMP_TOOLS.inc  counter.f90  ddl_du.f90  dense_solve.f90  direct_solve.f90  get_dnorm.f90  get_norm.f90  get_norm2.f90  mod_OMP_TOOLS.f90  mod_blocking_size.f90  norm_linsys.f90  norm_linsys2.f90  norm_resid.f90  omp_abbruch.f90  omp_bayes_solve.f90  omp_damax.f90  omp_ddot.f90  omp_gen_solve.f90  omp_gen_solve_diag.f90  omp_gen_solve_ilu.f90  omp_gen_solve_ssor.f90  omp_mvp.f90  omp_mvp2.f90  omp_preconditioners.f90  omp_sym_solve.f90  omp_sym_solve_diag.f90  omp_sym_solve_ilu.f90  omp_sym_solve_ssor.f90  p_pos_anz.f90  par_tools.f90  pre_bicgstab.f90  pre_bicgstab.inc  pre_cg.f90  pre_cg.inc  preconditioners.f90  prepare_solve.f90  qddot.f90  reduction.f90  (+10 more)
(+765 files in other folders)
